Updated base final

--- a/base/makefile
+++ b/base/makefile
@@ -1,7 +1,7 @@
-Bank: User.java Checking.java Saving.java Admin.java Bank.java
+Bank.class: User.java Checking.java Saving.java Admin.java Bank.java
 	javac User.java Checking.java Saving.java Admin.java Bank.java
 
-run:	Bank
+run:	Bank.class
 	java Bank
 
 clean: 
